# pyplastimatch

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  pyplsti_api.py  pyproject.toml  requirements.txt  run_api.sh  setup.py
docker_src/: .dockerignore  .env  Dockerfile  command_docker.sh  docker-compose.yaml
dockerfiles/: Dockerfile  command_docker.sh
notebooks/: Build_plastimatch_for_Ubuntu_22_04_LTS.ipynb  pyplastimatch_MWE.ipynb
pyplastimatch/: __init__.py  pyplastimatch.py  viz_utils.py
pyplastimatch/tests/: test_register.py
pyplastimatch/utils/: __init__.py  build_release.json  data.py  eval.py  install.py  viz.py  widgets.py
sample_data/: metadata_NSCLC-Radiomics.csv
sample_data/NSCLC-Radiomics/: LICENSE
sample_data/NSCLC-Radiomics/LUNG1-003/1.3.6.1.4.1.32722.99.99.247726286795860121686796574974227334270/1.3.6.1.4.1.32722.99.99.217589447746111741056421838759223122712/: 1-1.dcm
sample_data/NSCLC-Radiomics/LUNG1-007/1.3.6.1.4.1.32722.99.99.282967364651788470277412461462049836277/1.3.6.1.4.1.32722.99.99.308499776475237758781599767226383467358/: 1-1.dcm
tests/: README.md
tests/dockerfiles/: Dockerfile
