[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplastimatch"
version = "0.1"
authors = [
  { name="Dennis Bontempi", email="dbontempi@bwh.harvard.edu" },
]
description = "Basic Python wrapper for Plastimatch"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AIM-Harvard/pyplastimatch"
"Bug Tracker" = "https://github.com/AIM-Harvard/pyplastimatch/issues"
