[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplastimatch"
version = "0.4.4"
authors = [
  { name="Dennis Bontempi", email="dbontempi@bwh.harvard.edu" },
  { name="Leonard Nuernberg", email="lnuernberg@bwh.harvard.edu" },
]
maintainers = [
  { name="Dennis Bontempi", email="dbontempi@bwh.harvard.edu" },
  { name="Leonard Nuernberg", email="lnuernberg@bwh.harvard.edu" },
  { name="Andrey Fedorov", email="andrey.fedorov@gmail.com" },
]
description = "Basic Python wrapper for Plastimatch"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dynamic = [
  "dependencies"
]

[project.urls]
"Homepage" = "https://github.com/ImagingDataCommons/pyplastimatch"
"Bug Tracker" = "https://github.com/ImagingDataCommons/pyplastimatch/issues"
